reconfigured CSS to use calc function to span Donate modal to bottom of viewport on smaller screen sizes properly & avoid text cluterring as pointed out by andrew

--- a/src/style.css
+++ b/src/style.css
@@ -23,13 +23,9 @@
 
 
 /*CSS to make donation form scrollable*/ 
-#modal-dialog-form{
-  overflow-y: initial !important;
-}
-
 #modal-body-form{
-height: 400px;
-overflow-y: auto;
+  max-height: calc(100vh - 200px);
+  overflow-y: auto;
 }
 
 /*CSS to increase height of item-description's text area in form*/
